--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,6 +62,9 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
 
+    // Glide
+    implementation "dev.chrisbanes.accompanist:accompanist-glide:0.4.2"
+
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
