--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ android {
 }
 
 dependencies {
+
+    // Misc
     implementation "androidx.navigation:navigation-compose:$nav_version"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation "androidx.compose.ui:ui:$compose_version"
@@ -62,6 +64,9 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
     implementation("androidx.compose.ui:ui-viewbinding:1.3.0-beta03")
+
+    // Admob
+    implementation 'com.google.android.gms:play-services-ads:21.2.0'
 
     // KSP
     implementation("com.google.devtools.ksp:symbol-processing-api:1.7.10-1.0.6")
