--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.waynebloom.highscores"
+        applicationId "com.waynebloom.scorekeeper"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -49,6 +49,7 @@ android {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
     }
+    namespace 'com.waynebloom.scorekeeper'
 }
 
 dependencies {
@@ -60,6 +61,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
+    implementation("androidx.compose.ui:ui-viewbinding:1.3.0-beta03")
 
     // KSP
     implementation("com.google.devtools.ksp:symbol-processing-api:1.7.10-1.0.6")
