--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    package="com.waynebloom.highscores">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,13 +10,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.HighScores"
+        android:theme="@style/Theme.Scorekeeper"
         tools:targetApi="31">
         <activity
             android:name=".ScoresActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.HighScores">
+            android:theme="@style/Theme.Scorekeeper">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
