--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,7 @@ android {
     }
     buildFeatures {
         compose true
+        viewBinding true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.3.0'
@@ -63,7 +64,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
-    implementation("androidx.compose.ui:ui-viewbinding:1.3.0-beta03")
+    implementation 'androidx.compose.ui:ui-viewbinding:1.2.0-beta03'
+    implementation 'com.google.android.material:material:1.7.0-rc01'
 
     // Admob
     implementation 'com.google.android.gms:play-services-ads:21.2.0'
@@ -77,6 +79,8 @@ dependencies {
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.5.0'
     ksp "androidx.room:room-compiler:$room_version"
 
     // UI Tooling
