--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "com.waynebloom.scorekeeper"
         minSdk 21
         targetSdk 33
-        versionCode 5
-        versionName "2022.2"
+        versionCode 6
+        versionName "2022.2.1"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -59,43 +59,46 @@ android {
 
 dependencies {
 
-    // Misc
-    implementation 'androidx.core:core-ktx:1.7.0'
+    // Core
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.core:core-ktx:1.9.0'
     implementation "androidx.compose.ui:ui:$compose_version"
-    implementation 'androidx.compose.material:material:1.1.1'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
-    implementation 'androidx.activity:activity-compose:1.5.1'
-    implementation 'androidx.compose.runtime:runtime-livedata:1.1.1'
-    implementation 'androidx.compose.ui:ui-viewbinding:1.2.0-beta03'
-    implementation 'com.google.android.material:material:1.7.0-rc01'
+    implementation 'androidx.compose.material:material:1.3.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation 'com.google.android.material:material:1.7.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:$nav_version"
 
     // Admob
-    implementation 'com.google.android.gms:play-services-ads:21.2.0'
+    implementation 'com.google.android.gms:play-services-ads:21.3.0'
 
-    // KSP
+    // KSP (support for Room)
     implementation("com.google.devtools.ksp:symbol-processing-api:1.7.10-1.0.6")
 
-    // Glide
-    implementation "dev.chrisbanes.accompanist:accompanist-glide:0.4.2"
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:$nav_version"
+
+    // ReactiveX
+    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "io.reactivex.rxjava3:rxkotlin:3.0.1"
 
     // Room
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'com.google.android.material:material:1.5.0'
+    implementation "androidx.room:room-rxjava3:$room_version"
     ksp "androidx.room:room-compiler:$room_version"
-
-    // UI Tooling
-    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
-    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
-    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
 
     // Tests
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
+    // UI Tooling
+    debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
+    debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
+    implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+    implementation 'androidx.compose.ui:ui-viewbinding:1.2.0-beta03'
 }
