--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 /.idea/deploymentTargetDropdown.xml
+/.idea/misc.xml
 .DS_Store
 /build
 /captures
