--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,12 @@
 plugins {
     id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
     id 'com.google.devtools.ksp' version '1.8.0-1.0.9'
+    id "io.gitlab.arturbosch.detekt" version "1.23.0"
+    id 'org.jetbrains.kotlin.android'
+}
+
+detekt {
+    config.setFrom("$projectDir/detekt-config.yml")
 }
 
 android {
@@ -27,7 +32,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
             ndk.debugSymbolLevel = 'FULL'
         }
