--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'com.android.application'
-    id 'com.google.devtools.ksp' version '1.8.0-1.0.9'
+    id 'com.google.devtools.ksp' version '1.9.0-1.0.11'
     id "io.gitlab.arturbosch.detekt" version "1.23.0"
     id 'org.jetbrains.kotlin.android'
 }
@@ -72,8 +72,10 @@ dependencies {
 
     // Core
     implementation 'androidx.activity:activity-compose:1.7.2'
-//    implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Material
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 
@@ -84,7 +86,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:22.1.0'
 
     // KSP (support for Room)
-    implementation("com.google.devtools.ksp:symbol-processing-api:1.8.20-1.0.10")
+    implementation("com.google.devtools.ksp:symbol-processing-api:1.9.0-1.0.11")
 
     // Navigation
     implementation "androidx.navigation:navigation-compose:$nav_version"
