--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@
 .externalNativeBuild
 .cxx
 local.properties
+/.idea/copilot/chatSessions/00000000000.xd
+/.idea/copilot/chatSessions/blobs/version
+/.idea/copilot/chatSessions/xd.lck
