--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,8 +68,8 @@ android {
 dependencies {
 
     // Compose
+    implementation "androidx.compose.material3:material3:1.2.1"
     implementation "androidx.compose.foundation:foundation:$compose_version"
-    implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui:$compose_version"
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
@@ -104,8 +104,7 @@ dependencies {
     ksp "androidx.room:room-compiler:$room_version"
 
     // UI
-    implementation 'androidx.activity:activity-compose:1.7.2'
+    implementation 'androidx.activity:activity-compose:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.compose.material3:material3:1.2.1'
+    implementation 'com.google.android.material:material:1.12.0'
 }
