--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'com.google.devtools.ksp' version '1.9.0-1.0.11'
-    id 'kotlin-kapt'
+    id 'com.google.gms.google-services'
     id 'com.google.dagger.hilt.android'
+    id 'kotlin-kapt'
     id "io.gitlab.arturbosch.detekt" version "1.23.0"
     id 'org.jetbrains.kotlin.android'
 }
@@ -76,6 +77,9 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation "androidx.compose.ui:ui-viewbinding:$compose_version"
 
+    // shimmer effect
+    implementation("com.valentinilk.shimmer:compose-shimmer:1.3.0")
+
     // DI
     implementation "com.google.dagger:hilt-android:2.47"
     kapt "com.google.dagger:hilt-android-compiler:2.47"
@@ -107,4 +111,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.material:material:1.12.0'
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:33.1.0')
 }
