--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ plugins {
     id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
     id 'com.google.dagger.hilt.android' version '2.47' apply false
     id 'com.google.devtools.ksp' version '1.9.0-1.0.11' apply false
+    id 'com.google.gms.google-services' version '4.4.2' apply false
 }
 
 task clean(type: Delete) {
