--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,14 @@ android {
         }
 
         ksp {
-            arg("room.schemaLocation", "$projectDir/schemas".toString())
+            arg(new RoomSchemaArgProvider(new File(projectDir, "schemas")))
             arg("room.incremental", "true")
         }
+    }
+
+    sourceSets {
+        // Adds exported schema location as test app assets.
+        androidTest.assets.srcDirs += files("$projectDir/schemas".toString())
     }
 
     buildTypes {
@@ -114,4 +119,28 @@ dependencies {
 
     // Firebase
     implementation platform('com.google.firebase:firebase-bom:33.1.0')
+
+    // Testing
+    implementation 'androidx.test.ext:junit-ktx:1.1.5'
+    androidTestImplementation "androidx.room:room-testing:2.6.1"
+    androidTestImplementation "androidx.test:runner:1.5.2"
+}
+
+// This is required to run DB migration tests
+class RoomSchemaArgProvider implements CommandLineArgumentProvider {
+
+    @InputDirectory
+    @PathSensitive(PathSensitivity.RELATIVE)
+    File schemaDir
+
+    RoomSchemaArgProvider(File schemaDir) {
+        this.schemaDir = schemaDir
+    }
+
+    @Override
+    Iterable<String> asArguments() {
+        // Note: If you're using KAPT and javac, change the line below to
+        // return ["-Aroom.schemaLocation=${schemaDir.path}".toString()].
+        return ["room.schemaLocation=${schemaDir.path}".toString()]
+    }
 }
