--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,7 @@
 .gradle
 /app/release
 /local.properties
-/.idea/.name
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-/.idea/deploymentTargetDropdown.xml
-/.idea/misc.xml
+/.idea/*
 .DS_Store
 /build
 /captures
@@ -18,6 +10,3 @@
 .externalNativeBuild
 .cxx
 local.properties
-/.idea/copilot/chatSessions/00000000000.xd
-/.idea/copilot/chatSessions/blobs/version
-/.idea/copilot/chatSessions/xd.lck
