Library Updates & Post 2024.1 Bug Squashing - updated gradle configs drastically, including Kotlin 2.0.0 - migrated plugin and dependency version management to the toml paradigm - FIX: one-character stop bug in matches with 1 category - FIX: bad behavior while searching matches with no results - FIX: screen-height ad when not in a LazyX - FIX: Ads are loading every 10 instead of every 45

--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4096m -Dfile.encoding=UTF-8
 org.gradle.caching=true
 org.gradle.daemon=true
 org.gradle.parallel=true
@@ -28,3 +28,6 @@ kotlin.compiler.execution.strategy=in-process
 android.nonTransitiveRClass=true
 android.defaults.buildfeatures.buildconfig=true
 android.nonFinalResIds=true
+# KSP2 Beta opt-in
+# TODO: Track Room support for KSP2 https://developer.android.com/jetpack/androidx/releases/room#version_27_2
+ksp.useKSP2=false
