--- a/build.gradle
+++ b/build.gradle
@@ -1,29 +1,17 @@
 buildscript {
-    ext {
-        compose_version = '1.5.0'
-        nav_version = "2.6.0"
-        room_version = "2.5.2"
-    }
-
     repositories {
         google()
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'com.google.dagger:hilt-android-gradle-plugin:2.47'
-    }
 }
 
 plugins {
-    id 'com.android.application' version '8.5.0' apply false
-    id 'com.android.library' version '8.5.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.0' apply false
-    id 'com.google.dagger.hilt.android' version '2.47' apply false
-    id 'com.google.devtools.ksp' version '1.9.0-1.0.11' apply false
-    id 'com.google.gms.google-services' version '4.4.2' apply false
-}
-
-task clean(type: Delete) {
-    delete rootProject.buildDir
+    alias libs.plugins.android.application apply false
+    alias libs.plugins.android.library apply false
+    alias libs.plugins.compose.compiler apply false
+    alias libs.plugins.dagger.hilt apply false
+    alias libs.plugins.google.services apply false
+    alias libs.plugins.kotlin apply false
+    alias libs.plugins.ksp apply false
+    alias libs.plugins.room apply false
 }
