--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ buildscript {
 plugins {
     alias libs.plugins.android.application apply false
     alias libs.plugins.android.library apply false
-    alias libs.plugins.compose.compiler apply false
+    alias libs.plugins.compose.compiler
     alias libs.plugins.dagger.hilt apply false
     alias libs.plugins.google.services apply false
     alias libs.plugins.kotlin apply false
