implement Settings screen, add sign in and out functionality to Settings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
     implementation libs.compose.ui.tooling.preview
     implementation libs.compose.ui.viewbinding
     implementation libs.constraintlayout
+    implementation libs.datastore
     implementation libs.hilt.android
     implementation libs.hilt.navigation.compose
     implementation libs.junit.ktx
