--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation libs.activity.compose
     implementation libs.compose.foundation
     implementation libs.compose.material3
+    implementation libs.compose.material3.adaptive.navigation
     implementation libs.compose.ui
     implementation libs.compose.ui.tooling.preview
     implementation libs.compose.ui.viewbinding
