--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -9,7 +9,7 @@ junitKtx = "1.1.5"
 ktor = "3.1.1"
 lifecycle = "2.8.2"
 material = "1.12.0"
-material3 = "1.2.1"
+material3 = "1.3.1"
 moshi = "1.15.2"
 navigationCompose = "2.7.7"
 playServicesAds = "23.1.0"
@@ -31,6 +31,7 @@ ksp = "2.0.0-1.0.22"
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
+compose-material3-adaptive-navigation = { module = "androidx.compose.material3:material3-adaptive-navigation-suite", version.ref = "material3" }
 compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose" }
 compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose" }
